_sass/_theme.scss
/////////////////////////////////////////////////////////////////////////////////////
///*RULES*/
/////////////////////////////////////////////////////////////////////////////////////
//For using BEM you have to follow this rules:
//
//block name:       ".nav"
//modifier block:   ".nav--center"
//
//element name:     ".nav-menu"
//modifier element: ".nav-menu--center"
//
//block name:       ".navTop"
//modifier block:   ".navTop--fixed"
//
//element name:     ".navTop-menuButton"
//modifier element: ".navTop-menuButton--center"



/////////////////////////////////////////////////////////////////////////////////////
///*VARIABLES*/
/////////////////////////////////////////////////////////////////////////////////////
$color-dark: rgb(28,28,28);
$color-light: rgb(255,255,255);
$color-magenta: rgb(244,8,53);
$color-green: #7ab800;
/////////////////////////////////////////////////////////////////////////////////////
///*MIXINS*/
/////////////////////////////////////////////////////////////////////////////////////
@mixin typograph-gnuolane($font-size:1em){
	font-family: gnuolane;
	font-size: $font-size;
	font-weight: lighter;
	letter-spacing: 0.05em;
	text-transform: uppercase;
}
/////////////////////////////////////////////////////////////////////////////////////
///*TAGS*/
/////////////////////////////////////////////////////////////////////////////////////
@font-face{
	font-family: gnuolane;
	src: url("../files/gnuolane.otf");
}
html, body{
	height: 100%;
}
body{
	background-image: url("../images/bg.jpg");
	background-attachment: fixed;	
	color: $color-light;
	
	& > header{
		background: url("../../images/bgMenu.png") repeat-x bottom left;
		padding:1em 0 2em 0;
		position: fixed;
		width: 100%;
		z-index: 100000;
	}
	
	& > div:nth-child(2){
		height: 100%;
        //padding-top: 3em;
		position: relative;
		& > section{
			min-height: 100%;
            padding-top:3em;
            position: relative;
		}
        
        & > section:nth-child(4){
            position: relative;

            & > footer{
                background-color: $color-magenta;
                bottom: 0;
                height: 4em;    
                position: absolute;
                @include row();
            }
        }
	}
}
a{
	cursor: pointer;
}
h1{
	@include typograph-gnuolane(4em);
}
h2{
	@include typograph-gnuolane(2em);
}
img[src="images/photo.png"]{
    @include column(4);
	& + div{
		line-height: 1.5em;
        @include column(6);
        @include offset(2);
	}
}
ul li{
	line-height: 1.5em;
}
/////////////////////////////////////////////////////////////////////////////////////
///*GRID*/
/////////////////////////////////////////////////////////////////////////////////////
.row{
    @include row();
}
/////////////////////////////////////////////////////////////////////////////////////
///*NAV*/
/////////////////////////////////////////////////////////////////////////////////////
.menu{
    & a{
    	@include typograph-gnuolane(1.5em);
        background-color: transparent;
        border-radius: .25em;
        color:$color-dark;
        display: inline-block;
        padding:.25em .5em;
        text-decoration: none;
        -webkit-transition:background 1s, color 1s;
           -moz-transition:background 1s, color 1s;

        &:hover{
            background-color: $color-magenta;
            color: $color-light;
        }
    }
}
.menu--center{}
/////////////////////////////////////////////////////////////////////////////////////
///*BUTTONS*/
/////////////////////////////////////////////////////////////////////////////////////
.btn{
	border-radius: .25em;
	display: inline-block;
	padding: .75em 1em;
	text-decoration: none;
    
    &--ghost{
        border: solid 2px $color-light;
        color: $color-light;
        @include typograph-gnuolane(1.5em);
    }
}
/////////////////////////////////////////////////////////////////////////////////////
///*LISTS*/
/////////////////////////////////////////////////////////////////////////////////////
.list{ 
    & li{
        line-height: 3em;
    }
    &.list--noBullet{
        list-style: none;
    }
    &.list--noPadding{
        padding: 0;
    }
}
/////////////////////////////////////////////////////////////////////////////////////
///*SERVICES*/
/////////////////////////////////////////////////////////////////////////////////////
.services{
    @include column(6);
}
/////////////////////////////////////////////////////////////////////////////////////
///*SKILLS*/
/////////////////////////////////////////////////////////////////////////////////////
.skills{
    @include column(6);
}
/////////////////////////////////////////////////////////////////////////////////////
///*WORKS*/
/////////////////////////////////////////////////////////////////////////////////////
.workDetail{
    background-color: rgba(0, 0, 0, 0.7);
    position: absolute;
    padding: 6em 1em 1em 1em;
    width: 100%;
    top: 0;
    z-index: 100;
    
    & .workDetail-hideButton{
        color: white;
        float: right;
        text-decoration: none;
    }
    
    & .workDetail-image{
        @include column(6);
        & > img{
            width: 100%;
        }
    }
    
    & .workDetail-description{
        @include column(4);
        @include offset(2);
        & p{
            line-height: 1.6em;
        }
    }
}
.worksList{
    @include row();
    &.worksList--centered{
          @include row-center(8);
        
        li{
            @include column(3);
        }
    }
    & li{
        @include column(2);

        & a{
            border-radius: 9999em;
            box-shadow: 0px 0px 16px 5px rgba(69, 66, 66, 1);
            display: block;
            height: 170px;
            overflow: hidden;
            position: relative;
            width: 170px;
            
            &:before{
                background-color: transparent;
                border-radius: 999em;
                box-shadow: 0px 0px 16px 5px #1c1c1c inset;
                content: " ";
                height: 100%;
                left:0;
                position: absolute;
                top:0;
                width:100%;
                z-index: 1;
                -webkit-transition:background 1s, color 1s;
                     -moz-transition:background 1s, color 1s;		
            }
            &:hover:before{
                background-color: rgba(0,0,0,0.7);
                left: 0;
            }
            
            &:after{
                background: transparent  url("../../images/zoom.png") no-repeat center center;
                border-radius: 1000em;
                content: "";
                left: 8em;
                position: absolute;
                height: 100%;
                top:0;
                width: 100%;
                z-index: 30;
                -webkit-transition:left 1s;
                     -moz-transition:left 1s;	
            }

            &:hover:after{
                left: 0;
            }   
        }  
    } 
}
/////////////////////////////////////////////////////////////////////////////////////
///*CONTACTS*/
/////////////////////////////////////////////////////////////////////////////////////
.listContacts{
    & a{
        color: white;
        text-decoration: none;
    }
    @include row-center(6);
    
    & .listContacts-socialNetworking{
        @include column(4);
        li{
            @include column(6);
        }
    }
    & .listContacts-contacts{
        @include column(5);
        @include offset(3);
        li{
            position: relative;
        }
        span{
            left: -1.15em;
            position: absolute;
            top: 0.19em;
        }
    }
}

